--- a/trunk/Testing/.classpath
+++ b/trunk/Testing/.classpath
@@ -5,9 +5,9 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="libs/ormlite-android-4.48.jar"/>
-	<classpathentry kind="lib" path="libs/ormlite-core-4.48.jar"/>
-	<classpathentry kind="lib" path="libs/ormlite-android-4.48-javadoc.jar"/>
-	<classpathentry kind="lib" path="libs/ormlite-core-4.48-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ormlite-android-4.48.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ormlite-core-4.48.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ormlite-android-4.48-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/ormlite-core-4.48-javadoc.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
